# sdl3-demo

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: animation.h  game_object.h  main.cpp  timer.h
